tests/rosetta/out/Zig/100-prisoners.error
zig build: exit status 1
/tmp/100-prisoners.zig:33:133: error: expected type '[]const i32', found 'array_list.ArrayListAligned(i32,null)'
/tmp/zig-0.12.0/lib/std/array_list.zig:31:12: note: struct declared here
/tmp/zig-0.12.0/lib/std/array_list.zig:304:48: note: parameter type declared here
